--- a/BackToZeroC/C++/.vscode/tasks.json
+++ b/BackToZeroC/C++/.vscode/tasks.json
@@ -7,9 +7,9 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
-                "${file}",
+                "${workspaceFolder}/*.cpp",  //  1. 编译当前文件夹下所有 .cpp 后缀的
                 "-o",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe"
+                "${workspaceFolder}\\${workspaceRootFolderName}.exe"    //  2. ${workspaceRootFolderName}：当前工作空间根文件夹的名称
             ],
             "options": {
                 "cwd": "F:/MinGW/x86_64-7.3.0-release-win32-seh-rt_v5-rev0/mingw64/bin"
